pootle/static/css/style.css
/* ... */
.alert-block
{
    padding-top: 14px;
    padding-bottom: 14px;
}

.alert-block > p,
.alert-block > ul
{
    margin-bottom: 0;
}

.alert-block p + p
{
    margin-top: 5px;
}

.close
{
    float: right;
    font-size: 20px;
    font-weight: bold;
    line-height: 20px;
    color: #000000;
    text-shadow: 0 1px 0 #ffffff;

    opacity: 0.2;
}

.close:hover
{
    color: #000000;
    text-decoration: none;
    cursor: pointer;

    opacity: 0.4;
}

button.close
{
    padding: 0;
    cursor: pointer;
    background: transparent;
    border: 0;
    -webkit-appearance: none;
}

.fade
{
  opacity: 0;
  -webkit-transition: opacity 0.15s linear;
     -moz-transition: opacity 0.15s linear;
       -o-transition: opacity 0.15s linear;
          transition: opacity 0.15s linear;
}

.fade.in
{
  opacity: 1;
}


/*
 * PAGE BODY
 */

#body
{
    margin: 0;
    padding: 5px 0px;
}

#body:after
{
    content: ".";
    display: block;
    height: 0;
    width: 0;
    clear: both;
    visibility: hidden;
}

/* TABLES */

.module table,
.module-primary table
{
    width: 100%;
}

td.language,
td.code,
td.profile,
td.username
{
    padding-left: 5px;
}

html[dir="rtl"] td.language,
html[dir="rtl"] td.code,
html[dir="rtl"] td.profile,
html[dir="rtl"] td.username
{
    padding-left: 0;
    padding-right: 5px;
}

tr.even,
td.even,
li.even,
tr.view-row:nth-child(odd)
{
    background: #f8f8f8;
}

/* MODULES */

.clear
{
    clear: both;
}

.module
{
    width: 48%;
    float: right;
    margin: 0;
}

html[dir="rtl"] .module
{
    float: left;
}

.module.first
{
    float: left;
}

html[dir="rtl"] .module.first
{
    float: right;
}

.hd h2
{
    margin: 1em 0.5em 0;
    border-bottom: 1px solid #eee;
    clear:both;
    line-height: 120%;
}

html[dir="rtl"] .hd h2
{
    margin-left: 0;
    margin-right: 0.5em;
}

.last-action
{
    margin: 1em 0 1em 0;
    padding: 0.5em;
    background-color: #f8f8f8;
    border: 1px solid #d9d9d9;
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
}

html[dir="rtl"] .last-action
{
    margin-left: 0;
    margin-right: 1em;
}

.last-action img
{
    vertical-align: text-bottom;
    width: 20px;
    height: 20px;
}

.last-action .extra-item-meta
{
    color: #999;
}

.hd h3
{
    border-top: 1px solid #eee;
    margin: 1em 0 0 0;
}

.hd h3 span
{
    position: relative;
    top: -10px;
    padding-right: 5px;
    background-color: #fff;
}

html[dir="rtl"] .hd h3 span
{
    padding-right: 0;
    padding-left: 5px;
}

.bd
{
    margin: 1em;
}

.nomargin
{
    margin: 0;
}

.bd h2,
{
    margin-bottom: 0.5em;
}

.bd h3
{
    font-size: 120%;
}

.bd h4
{
    font-size: 100%;
}

/* USER PROFILES */

#user-profile
{
    float: none;
    width: 100%;
}

#user-contributions-wrapper
{
    margin-right: 220px;
}

html[dir="rtl"] #user-contributions-wrapper
{
    margin-right: auto;
    margin-left: 220px;
}

#user-contributions
{
    float: left;
    width: 100%;
}

html[dir="rtl"] #user-contributions
{
    float: right;
}

#user-contributions table
{
    margin-top: 0.5em;
    margin-bottom: 1.5em;
}

#user-contributions table td
{
    padding: 5px;
    width: 16.6%;
}

#user-meta-wrapper
{
    float: right;
    width: 200px;
}

html[dir="rtl"] #user-meta-wrapper
{
    float: left;
}

#user-meta
{
    margin: 0 20px;
}

#user-meta img
{
    border: 1px solid #eee;
    padding: 5px;
}

#user-meta .user-name
{
    font-size: 140%;
    line-height: 2;
}


/* UPLOAD FORM / UPDATE FROM VCS */

div#upload p,
div#upload ul,
div#update p
{
    margin-bottom: 0.5em;
}


/*
 * BUTTONS
 */

.btn,
a.btn,
input[type="submit"]
{
    border: 0;
    outline: 0;
    cursor: pointer;
    display: inline-block;
    padding: 4px 10px;
    text-align: center;

    min-height: 16px;
    min-width: 110px;
    -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
            border-radius: 5px;
    -webkit-box-shadow: 0px 0px 2px #000;
       -moz-box-shadow: 0px 0px 2px #000;
            box-shadow: 0px 0px 2px #000;

    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#cccccc');
    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ccc));
    background: -webkit-linear-gradient(top,  #fff,  #ccc);
    background:    -moz-linear-gradient(top,  #fff,  #ccc);
    background:     -ms-linear-gradient(top,  #fff,  #ccc);
    background:      -o-linear-gradient(top,  #fff,  #ccc);
    background:         linear-gradient(top,  #fff,  #ccc);

    color: #130f30;
}

.btn:hover,
input[type="submit"]:hover
{
    text-decoration: none;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd');
    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ddd));
    background: -webkit-linear-gradient(top,  #fff,  #ddd);
    background:    -moz-linear-gradient(top,  #fff,  #ddd);
    background:     -ms-linear-gradient(top,  #fff,  #ddd);
    background:      -o-linear-gradient(top,  #fff,  #ddd);
    background:         linear-gradient(top,  #fff,  #ddd);
}

.btn:active,
input[type="submit"]:active
{
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cccccc', endColorstr='#ffffff');
    background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#fff));
    background: -webkit-linear-gradient(top,  #ccc,  #fff);
    background:    -moz-linear-gradient(top,  #ccc,  #fff);
    background:     -ms-linear-gradient(top,  #ccc,  #fff);
    background:      -o-linear-gradient(top,  #ccc,  #fff);
    background:         linear-gradient(top,  #ccc,  #fff);
}
/* ... */

